--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,4 +6,11 @@
  * ==========================================================================
  */
 
+// Css3 stuff
 @import 'mixins/lesshat.less';
+
+// Utilities
+@import 'mixins/tab-focus.less';
+
+// Components
+@import 'mixins/buttons.less';
