--- a/less/icons.less
+++ b/less/icons.less
@@ -4,4 +4,10 @@
  * ==========================================================================
  */
 
-@import "icons/linea.less";
+// Import icon library
+@import "icons/ionicon";
+
+// base icon style
+.icon {
+  &:extend(.ionicon-base-style);
+}
