--- a/less/mixins.less
+++ b/less/mixins.less
@@ -14,3 +14,6 @@
 
 // Components
 @import 'mixins/buttons.less';
+@import 'mixins/forms.less';
+@import 'mixins/table.less';
+@import 'mixins/label.less';
