--- a/less/fonts.less
+++ b/less/fonts.less
@@ -4,3 +4,50 @@
  * ==========================================================================
  */
 
+@font-face {
+  font-family: 'open_sansbold';
+  src: url('@{font-path}/opensans-bold-webfont.eot');
+  src: url('@{font-path}/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('@{font-path}/opensans-bold-webfont.woff2') format('woff2'),
+  url('@{font-path}/opensans-bold-webfont.woff') format('woff'),
+  url('@{font-path}/opensans-bold-webfont.ttf') format('truetype'),
+  url('@{font-path}/opensans-bold-webfont.svg#open_sansbold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sansitalic';
+  src: url('@{font-path}/opensans-italic-webfont.eot');
+  src: url('@{font-path}/opensans-italic-webfont.eot?#iefix') format('embedded-opentype'),
+  url('@{font-path}/opensans-italic-webfont.woff2') format('woff2'),
+  url('@{font-path}/opensans-italic-webfont.woff') format('woff'),
+  url('@{font-path}/opensans-italic-webfont.ttf') format('truetype'),
+  url('@{font-path}/opensans-italic-webfont.svg#open_sansitalic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sanslight';
+  src: url('@{font-path}/opensans-light-webfont.eot');
+  src: url('@{font-path}/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
+  url('@{font-path}/opensans-light-webfont.woff2') format('woff2'),
+  url('@{font-path}/opensans-light-webfont.woff') format('woff'),
+  url('@{font-path}/opensans-light-webfont.ttf') format('truetype'),
+  url('@{font-path}/opensans-light-webfont.svg#open_sanslight') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'open_sansregular';
+  src: url('@{font-path}/opensans-regular-webfont.eot');
+  src: url('@{font-path}/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('@{font-path}/opensans-regular-webfont.woff2') format('woff2'),
+  url('@{font-path}/opensans-regular-webfont.woff') format('woff'),
+  url('@{font-path}/opensans-regular-webfont.ttf') format('truetype'),
+  url('@{font-path}/opensans-regular-webfont.svg#open_sansregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
