--- a/less/forms.less
+++ b/less/forms.less
@@ -298,7 +298,7 @@ input[type="checkbox"] {
   .form-control-validation(@state-warning-text; @state-warning-text; @state-warning-bg);
 }
 .validation-error {
-  .form-control-validation(@state-danger-text; @state-danger-text; @state-danger-bg);
+  .form-control-validation(@state-error-text; @state-error-text; @state-error-bg);
 }
 
 /**
