--- a/less/table.less
+++ b/less/table.less
@@ -84,7 +84,7 @@ th {
 .table-row-variant(success; @state-success-bg);
 .table-row-variant(info; @state-info-bg);
 .table-row-variant(warning; @state-warning-bg);
-.table-row-variant(danger; @state-danger-bg);
+.table-row-variant(error; @state-error-bg);
 
 /**
  * Sizing
