add homepage & finish installation guide, add dynamic section navigation

--- a/docs/_includes/css/typography.html
+++ b/docs/_includes/css/typography.html
@@ -1,9 +1,8 @@
-<h1 id="typography" class="docs-section-title">Typography</h1>
+<h1 class="docs-section-title" id="type">Typography</h1>
 <p class="docs-section-desc">teks, paragraf dan kawan-kawan</p>
 
 <!-- Headings -->
-<section id="headings">
-<h2 class="docs-subsection-title">Headings</h2>
+<h2 class="docs-subsection-title" id="type-headings">Headings</h2>
 <div class="docs-subsection-desc">
     <p>heading 1 hingga heading 6</p>
 </div>
@@ -35,7 +34,6 @@
 </div>
 </div>
 </div>
-</section>
 
 <!--
  Template
