add scaffolding, some typographic element. grid docs, typography docs & css overview docs

--- a/docs/_includes/getting-started/introduction.html
+++ b/docs/_includes/getting-started/introduction.html
@@ -1,5 +1,5 @@
 <h1 class="docs-section-title" id="intro">intro....</h1>
-<p class="docs-section-desc">sedikit pengenalan soal front-end frameworks lussa ui</p>
+<p class="docs-section-desc">kalo kata orang, tak kenal maka ta'aruf</p>
 
 <!-- about -->
 <h2 class="docs-subsection-title" id="intro-about">The Frameworks</h2>
