--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -1,28 +1,24 @@
 <li>
     <a href="#overview">Overview</a>
     <ul>
-        <li class="active"><a href="#overview-doctype">HTML5 doctype</a></li>
+        <li><a href="#overview-html5">HTML5 doctype</a></li>
         <li><a href="#overview-mobile">Mobile first</a></li>
-        <li><a href="#overview-type-links">Typography and links</a></li>
+        <li><a href="#overview-customization">Modular & Easy to Customize</a></li>
         <li><a href="#overview-normalize">Normalize.css</a></li>
-        <li><a href="#overview-container">Containers</a></li>
     </ul>
 </li>
 <li>
     <a href="#grid">Grid system</a>
     <ul>
         <li><a href="#grid-intro">Introduction</a></li>
-        <li><a href="#grid-media-queries">Media queries</a></li>
-        <li><a href="#grid-options">Grid options</a></li>
-        <li><a href="#grid-example-basic">Ex: Stacked-to-horizontal</a></li>
-        <li><a href="#grid-example-fluid">Ex: Fluid container</a></li>
-        <li><a href="#grid-example-mixed">Ex: Mobile and desktop</a></li>
-        <li><a href="#grid-example-mixed-complete">Ex: Mobile, tablet, desktop</a></li>
-        <li><a href="#grid-example-wrapping">Ex: Column wrapping</a></li>
-        <li><a href="#grid-responsive-resets">Responsive column resets</a></li>
-        <li><a href="#grid-offsetting">Offsetting columns</a></li>
-        <li><a href="#grid-nesting">Nesting columns</a></li>
-        <li><a href="#grid-column-ordering">Column ordering</a></li>
+        <li><a href="#grid-container">Container</a></li>
+        <li><a href="#grid-class">Grid Classes</a></li>
+        <li><a href="#grid-nested-zero-padding">Nested Grid, Zero Padding</a></li>
+        <li><a href="#grid-mobile-hidden-class">Mobile & Hidden Class</a></li>
+        <li><a href="#grid-tablet-class">Tablet Class</a></li>
+        <li><a href="#grid-push-pull">Push & Pull</a></li>
+        <li><a href="#grid-prefix-suffix">Prefix & Suffix</a></li>
+        <li><a href="#grid-clearfix">Clearfix</a></li>
         <li><a href="#grid-less">Less mixins and variables</a></li>
     </ul>
 </li>
@@ -30,13 +26,13 @@
     <a href="#type">Typography</a>
     <ul>
         <li><a href="#type-headings">Headings</a></li>
-        <li><a href="#type-body-copy">Body copy</a></li>
+        <li><a href="#type-paragraph">Paragraf</a></li>
         <li><a href="#type-inline-text">Inline text elements</a></li>
-        <li><a href="#type-alignment">Alignment classes</a></li>
-        <li><a href="#type-transformation">Transformation classes</a></li>
-        <li><a href="#type-abbreviations">Abbreviations</a></li>
-        <li><a href="#type-addresses">Addresses</a></li>
-        <li><a href="#type-blockquotes">Blockquotes</a></li>
+        <li><a href="#type-alignment">Alignment</a></li>
+        <li><a href="#type-transformation">Kapitalisasi</a></li>
+        <li><a href="#type-accent">Aksen</a></li>
+        <li><a href="#type-spacing">Jarak / Spacing</a></li>
+        <li><a href="#type-blockquotes">Kutipan</a></li>
         <li><a href="#type-lists">Lists</a></li>
     </ul>
 </li>
