--- a/less/main.less
+++ b/less/main.less
@@ -14,6 +14,7 @@
 @import "fonts.less";
 
 // Core CSS
+@import "scaffolding.less";
 @import "grid.less";
 @import "typography.less";
 @import "forms.less";
