add table & code docs

--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -47,21 +47,21 @@
     </ul>
 </li>
 <li>
-    <a href="#tables">Tables</a>
+    <a href="#table">Tabel</a>
     <ul>
-        <li><a href="#tables-example">Basic example</a></li>
-        <li><a href="#tables-striped">Striped rows</a></li>
-        <li><a href="#tables-bordered">Bordered table</a></li>
-        <li><a href="#tables-hover-rows">Hover rows</a></li>
-        <li><a href="#tables-condensed">Condensed table</a></li>
-        <li><a href="#tables-contextual-classes">Contextual classes</a></li>
-        <li><a href="#tables-responsive">Responsive tables</a></li>
+        <li><a href="#table-basic">Tabel Standar / Basic / Umum</a></li>
+        <li><a href="#table-striped">Belang-belang / Zebra</a></li>
+        <li><a href="#table-bordered">Pake Border</a></li>
+        <li><a href="#table-hover-rows">Hover Row</a></li>
+        <li><a href="#table-condensed">Table Padat</a></li>
+        <li><a href="#table-accent">Konteks Warna</a></li>
+        <li><a href="#table-responsive">Responsive</a></li>
     </ul>
 </li>
 <li>
     <a href="#forms">Forms</a>
     <ul>
-        <li><a href="#forms-example">Basic example</a></li>
+        <li><a href="#forms-basic">Basic example</a></li>
         <li><a href="#forms-inline">Inline form</a></li>
         <li><a href="#forms-horizontal">Horizontal form</a></li>
         <li><a href="#forms-controls">Supported controls</a></li>
